--- a/templates/spatial/index.html
+++ b/templates/spatial/index.html
@@ -99,7 +99,7 @@
 					<li><a href="https://github.com/chriszhuu/SearchEngine" target="_blank" class="icon fa-github"></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Indexer Group CIS 455/555</li>
+					<li>&copy; Indexer Group<br>CIS 455 / 555: Internet and Web Systems (Spring 2021)</li>
 					<!--li>Design: <a href="http://templated.co">TEMPLATED</a></li-->
 				</ul>
 			</div>
