--- a/templates/spatial/index.html
+++ b/templates/spatial/index.html
@@ -67,7 +67,7 @@
 							<h3><span style="background-color:rgb(208, 234, 255);">Visualization of entity's Dolores embedding:<br></span></h3>
 						</header>
 						{%for ent in entityList%}
-						<p><b>>> Put "{{ent.entity}}" in the search box on the right side of the <a href="https://54.90.23.189:443/#projector" target="_blank">graph</a>, and miracle happens ^_^</b></p>
+						<p><b>>> Put "{{ent.entity}}" in the search box on the right side of the <a href="http://54.90.23.189:443/#projector" target="_blank">graph</a>, and miracle happens ^_^</b></p>
 						{%endfor%}
 						{%endif%}
 						{%endif%}
