--- a/templates/spatial/index.html
+++ b/templates/spatial/index.html
@@ -77,7 +77,7 @@
 					<div class="feature">
 						<div class="content">
 							<header>
-								<h4><a href="{{result.url}}">{{result.title|safe|truncate_title}}</a></h4>
+								<h4><a href="{{result.url}}" target="_blank">{{result.title|safe|truncate_title}}</a></h4>
 								<p>{{result.url|truncate_url}}</p>
 							</header>
 							<p>{{result.description|safe|truncate_description}}</p>
